Bug 126588 - EDITING: Firebird: View could be executed, but crashes when trying to save
Summary: EDITING: Firebird: View could be executed, but crashes when trying to save
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.3.0.2 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.1
Keywords: bibisected, bisected, haveBacktrace, regression
: 127299 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-07-29 07:50 UTC by Robert Großkopf
Modified: 2019-09-04 10:10 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Try to create a view with SQL-code from query "View_bericht_Monat_zweispaltig" - saving impossible. (33.78 KB, application/vnd.oasis.opendocument.database)
2019-07-29 07:50 UTC, Robert Großkopf
Details
bt Windows (windbg) (87.09 KB, text/plain)
2019-07-30 13:48 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2019-07-29 07:50:32 UTC
Created attachment 153022 [details]
Try to create a view with SQL-code from query "View_bericht_Monat_zweispaltig" - saving impossible.

Open the attached database.
Execute the query "View_Bericht_Monat_zweispaltig".
Query works in Firebird.
Open this query for editing in SQL-mode.
Copy the SQL-code.
Go to Table → Create View
Switch GUI off and insert the SQL-code.
Set execution to direct SQL.
Execute the view - works.
Save the view as "Bericht_Monat_zweispaltig".
LO crashes immediately.

There are 2 specific parts in this view: 
View depends on another view in this database.
View must be executed in direct SQL.
So could be one of this parts is the one which leads to the crash.

Tested with LO 6.3.0.2 on OpenSUSE 64bit rpm Linux.
Comment 1 Robert Großkopf 2019-07-29 08:52:52 UTC
Have tested the same with LO 6.5.0.2. Could create the view. So it's a regression.
Comment 2 Julien Nabet 2019-07-30 13:48:14 UTC
Created attachment 153056 [details]
bt Windows (windbg)

On pc Win10 with master sources updated today, I could reproduce this.
Comment 3 Xisco Faulí 2019-07-30 16:58:05 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d425658bd9fd8e315e4931afb544bc845da0360e

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-12-19 16:10:51 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-12-21 08:26:15 +0100
commit d425658bd9fd8e315e4931afb544bc845da0360e (patch)
tree a35679686a7df2a504b9088ba6807b60c52067fc
parent 526387b96e9bc2c04b0dc26744bf6b88ea7c0521 (diff)
pass OSQLParseNode around by unique_ptr

Bisected with: bibisect-linux64-6.3

Adding Cc: to Noel Grandin
Comment 4 Commit Notification 2019-08-07 18:14:18 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6d024a69164716f7856ec936a72d01a6630d2a7c%5E%21

tdf#126588 crash in saving view

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-08-07 20:04:37 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 6d024a69164716f7856ec936a72d01a6630d2a7c
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Noel, thanks for fixing this issue!
Comment 6 Commit Notification 2019-08-07 20:06:01 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/284289a3a8e33b8998ac08ff17f814b028c55375%5E%21

tdf#126588 crash in saving view

It will be available in 6.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-09-04 10:10:31 UTC
*** Bug 127299 has been marked as a duplicate of this bug. ***