connectivity/source/parse/sqlnode.cxx
@@ -1293,6 +1293,7 @@ std::unique_ptr<OSQLParseNode> OSQLParser::predicateTree(OUString& rErrorMessage
 
         // clear the garbage collector
         (*s_pGarbageCollector)->clearAndDelete();
+        m_pParseTree.release(); // because the garbage collector deleted it
         return nullptr;
     }
     else
